[project]
name = "qwen3-tts-test"
version = "0.1.0"
description = "Qwen3 TTS voice cloning test"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.0",
    "numpy>=1.26",
    "soundfile>=0.12",
    "torch>=2.3.0",
    "qwen-tts",
    "numba>=0.59.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
app = "qwen3_tts_test.app_gradio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_tts_test"]

[tool.uv]
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
exclude = [
    "^tests/",
]
